# book-list

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
book_list/: __init__.py  __main__.py  alphabetize.py  book_list.py
data/: bookstores.md  lent_books.md  random.md  read_books.md  read_books_alpha.md  recommendations.md  unread_books.md
utils/: alphabetize_list.py
